# SPACE_HPC_Visualization_Workshop

./: .gitignore  .nojekyll  README.md  _quarto.yml  cnn.ipynb  demo_hipster.ipynb  demo_hipster_gaia.ipynb  demo_hipster_illustris.ipynb  demo_illustris.ipynb  demo_spherinator.ipynb  demo_spherinator_gaia.ipynb  demo_spherinator_illustris.ipynb  demo_structure.md  get_gaia_onnx.py  get_illustris_onnx.py  index.html  index.qmd  pyproject.toml  references.bib  requirements.txt  subhalo_ids.txt  test.ipynb  title-slide.html
.github/workflows/: quarto.yml
colab/: spherinator_illustris.ipynb
configs/hipster/: gaia.yaml  illustris.yaml
configs/spherinator/: gaia.yaml  illustris.yaml  illustris_2.yaml
experiments/: gaia_vae_8.yaml  gaia_vae_8_nll_normal.yaml  gaia_vae_8_nll_truncated.yaml
